# tubes-detector

./: .gitignore  CMakeLists.txt  README.md  config.yaml
include/: Detector.h  utils.h
src/: Detector.cpp  main.cpp
